@@ -293,7 +293,8 @@ prevent trails through the air. NOLOCKS=true to prevent trails through locked do
 NOHOMES=true to prevent trails through private homes. NOINDOOR=true to prevent finding or trailing \
 through indoor rooms. NOCLIMB to prevent trails through climbable exits. \
 NOCRAWL to prevent trails through crawlable exits.  Use PORTAL=true to have the concierge create \
-a magical portal instead of giving directions.
+a magical portal instead of giving directions. Use CLAN=[CLAN NAME] to have the concierge \
+restrict destinations to clan conquered or property rooms.
 
 BEHAVIOR_CORPSEEATER=\
 Behavior   : CorpseEater\n\r\
