@@ -31,6 +31,7 @@
  30. Suffix and Prefix Titles will automatically combine.  See help. 
  31. New property: Prop_Fumble, to cause skill failures
  32. Addictions now supports multiple additions, and sniffing magic dust
+ 33. New Clan Item: StdClanConcierge (and Gen*) for clans getting around
 
 # Build 5.9.12 Release 1/17/2022
   *. DB Changes: CMCOLR field in CMCHAR increased in size to 255 chars, CMSNAM field added to CMBKLG
